product/standard/sentinel-dashboard-pro/sentinel-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel
spec:
  finalizers:
  - kubernetes
